--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/express": "^4.17.14",
+        "@types/node": "^20.10.7",
         "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.4"
