--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "devDependencies": {
     "@types/node": "^20.10.5"
+  },
+  "dependencies": {
+    "chalk": "^5.3.0"
   }
 }
