--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,15 @@
     "license": "ISC",
     "devDependencies": {
         "@types/express": "^4.17.14",
-        "@types/node": "^20.10.7",
+        "@types/node": "^20.11.0",
         "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
-        "typescript": "^4.8.4"
+        "typescript": "^4.9.5"
     },
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.1",
+        "tsc": "^2.0.4",
         "uuid-by-string": "^4.0.0"
     }
 }
