--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,11 @@
         "typescript": "^4.9.5"
     },
     "dependencies": {
+        "@types/gulp-concat": "^0.0.37",
         "cors": "^2.8.5",
         "express": "^4.18.1",
+        "gulp": "^4.0.2",
+        "gulp-concat": "^2.6.1",
         "tsc": "^2.0.4",
         "uuid-by-string": "^4.0.0"
     }
