--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "@types/node": "^20.10.5"
   },
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "start": "^5.1.0"
   }
 }
